<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.kyshatbmozno.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.kyshatbmozno.ui.addfood.AddFoodFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_addfood" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.kyshatbmozno.ui.addrest.AddRestFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_addrest" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.kyshatbmozno.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"
        />

    <fragment
        android:id="@+id/nav_createWorkers"
        android:name="com.example.kyshatbmozno.ui.createworkers.CreateWorkersFragment"
        android:label="@string/createWorkers"
        tools:layout="@layout/fragment_create_workers" />

</navigation>